--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,27 @@
 *.so
 *.dylib
 
+# === Unity Generated ===
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ogs/
+[Uu]serSettings/
+
+# === Visual Studio / VS Code ===
+.vscode/
+.vs/
+*.csproj
+*.sln
+*.user
+*.userprefs
+
+# === OS ===
+.DS_Store
+Thumbs.db
+
 # Test binary, built with `go test -c`
 *.test
 
